--- a/src/main/resources/templates/chat/roomdetail.html
+++ b/src/main/resources/templates/chat/roomdetail.html
@@ -36,7 +36,7 @@
     </div>
     <ul class="list-group">
         <li class="list-group-item" v-for="message in messages">
-            {{message.sender}} - {{message.message}}</a>
+            {{message.sender}} - {{message.message}}
         </li>
     </ul>
 </div>
@@ -60,32 +60,65 @@
             token: '',
             userCount: 0
         },
+
         created() {
             this.roomId = localStorage.getItem('wschat.roomId');
             this.roomName = localStorage.getItem('wschat.roomName');
             var _this = this;
-            axios.get('/chat/user').then(response => {
-                _this.token = response.data.token;
-                ws.connect({"token":_this.token}, function(frame) {
-                    ws.subscribe("/sub/chat/room/"+_this.roomId, function(message) {
+            // 액세스 토큰을 쿠키에서 가져오기
+            var accessToken = _this.getCookie('accessToken');
+            if (accessToken) {
+                _this.token = accessToken;
+                ws.connect({"token": _this.token}, function (frame) {
+                    ws.subscribe("/sub/chat/room/" + _this.roomId, function (message) {
                         var recv = JSON.parse(message.body);
                         _this.recvMessage(recv);
                     });
-                }, function(error) {
+                    // 대화 내용 가져오는 요청을 추가합니다.
+                    axios.get('/chat/messages/' + _this.roomId)
+                        .then(response => {
+                            _this.messages = response.data;
+                        })
+                        .catch(error => {
+                            console.error('Failed to fetch chat messages:', error);
+                        });
+
+                }, function (error) {
                     alert("서버 연결에 실패 하였습니다. 다시 접속해 주십시요.");
-                    location.href="/chat/room";
+                    location.href = "/chat/room";
                 });
-            });
+            }
         },
+
         methods: {
-            sendMessage: function(type) {
-                ws.send("/pub/chat/message", {"token":this.token}, JSON.stringify({type:type, roomId:this.roomId, message:this.message}));
+
+            sendMessage: function (type) {
+                ws.send("/pub/chat/message", {"token": this.token}, JSON.stringify({
+                    type: type,
+                    roomId: this.roomId,
+                    message: this.message
+                }));
                 this.message = '';
             },
-            recvMessage: function(recv) {
+            recvMessage: function (recv) {
                 this.userCount = recv.userCount;
-                this.messages.unshift({"type":recv.type,"sender":recv.sender,"message":recv.message})
+                this.messages.unshift({"type": recv.type, "sender": recv.sender, "message": recv.message})
+            },
+            // 이름에 해당하는 쿠키 값을 가져오는 함수
+            getCookie(accessToken) {
+                const value = `; ${document.cookie}`;
+                const parts = value.split(`; ${accessToken}=`);
+                if (parts.length === 2) return parts.pop().split(';').shift();
+            },
+            decodeAccessToken(token) {
+                const base64Url = token.split('.')[1];
+                const base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
+                const jsonPayload = decodeURIComponent(atob(base64).split('').map(function(c) {
+                    return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
+                }).join(''));
+                return JSON.parse(jsonPayload);
             }
+
         }
     });
 </script>
