--- a/src/main/resources/templates/chat/roomdetail.html
+++ b/src/main/resources/templates/chat/roomdetail.html
@@ -18,12 +18,13 @@
 <div class="container" id="app" v-cloak>
     <div class="row">
         <div class="col-md-6">
-            <h4>{{roomName}} <span class="badge badge-info badge-pill">{{userCount}}</span></h4>
+            <h4>{{ roomName }} <span class="badge badge-info badge-pill">{{ userCount }}</span></h4>
         </div>
         <div class="col-md-6 text-right">
             <a class="btn btn-primary btn-sm" href="/logout">로그아웃</a>
-            <a class="btn btn-info btn-sm" href="/chat/room">채팅방 나가기</a>
+            <a class="btn btn-info btn-sm" href="/chat/room" v-on:click="leaveChatRoom">채팅방 나가기</a>
         </div>
+
     </div>
     <div class="input-group">
         <div class="input-group-prepend">
@@ -36,7 +37,7 @@
     </div>
     <ul class="list-group">
         <li class="list-group-item" v-for="message in messages">
-            {{message.sender}} - {{message.message}}</a>
+            {{ message.sender }} - {{ message.message }}
         </li>
     </ul>
 </div>
@@ -47,8 +48,10 @@
 <script src="/webjars/stomp-websocket/2.3.4/stomp.min.js"></script>
 <script>
     // websocket & stomp initialize
-    var sock = new SockJS("/ws-stomp");
+    var accessToken = getCookie('accessToken'); // 토큰을 바깥으로 빼냄
+    var sock = new SockJS('/ws-stomp');
     var ws = Stomp.over(sock);
+
     // vue.js
     var vm = new Vue({
         el: '#app',
@@ -57,44 +60,54 @@
             roomName: '',
             message: '',
             messages: [],
-            token: '',
             userCount: 0
         },
         created() {
-            this.token = this.getCookie('accessToken');
             this.roomId = localStorage.getItem('wschat.roomId');
             this.roomName = localStorage.getItem('wschat.roomName');
             var _this = this;
-            axios.get('/chat/user').then(response => {
-                ws.connect({'Authorization':'Bearer ' + _this.token}, function(frame) {
-                    ws.subscribe("/sub/chat/room/"+_this.roomId, function(message) {
-                        var recv = JSON.parse(message.body);
-                        _this.recvMessage(recv);
-                    });
-                }, function(error) {
-                    alert("서버 연결에 실패 하였습니다. 다시 접속해 주십시요.");
-                    location.href="/chat/room";
-                });
+            ws.connect({'Authorization': accessToken}, function (frame) {
+                ws.subscribe("/sub/chat/room/" + _this.roomId, function (message) {
+                    var recv = JSON.parse(message.body);
+                    _this.recvMessage(recv);
+                },{'Authorization': accessToken});
+            }, function (error) {
+                alert("서버 연결에 실패하였습니다. 다시 접속해 주십시요.");
+                location.href = "/chat/room";
             });
         },
 
         methods: {
-
-            getCookie: function(name) {
-                var value = "; " + document.cookie;
-                var parts = value.split("; " + name + "=");
-                if (parts.length === 2) return parts.pop().split(";").shift();
-            },
-            sendMessage: function(type) {
-                ws.send("/pub/chat/message", {"Authorization": this.token}, JSON.stringify({type:type, roomId:this.roomId, message:this.message}));
+            sendMessage: function (type) {
+                ws.send("/pub/chat/message", {"Authorization": accessToken},
+                    JSON.stringify({type: type, roomId: this.roomId, message: this.message}));
                 this.message = '';
             },
-            recvMessage: function(recv) {
+            recvMessage: function (recv) {
                 this.userCount = recv.userCount;
-                this.messages.unshift({"type":recv.type,"sender":recv.sender,"message":recv.message})
+                this.messages.unshift({"type": recv.type, "sender": recv.sender, "message": recv.message});
+            },
+            disconnectWebSocket: function () {
+                ws.disconnect(function () {
+                    // 연결 해제 성공
+                    console.log("웹소켓 서버 연결해제");
+                }, {
+                    "Authorization": accessToken  // 토큰 정보 추가
+                });
+            },
+            leaveChatRoom: function () {
+                // 채팅방 나가기 버튼 클릭 시 호출되는 함수
+                this.disconnectWebSocket(); // 웹소켓 연결 해제
+                // 여기에 채팅방 나가기 로직을 추가하세요.
             }
         }
     });
+    // 토큰 쿠키를 가져오는 함수
+    function getCookie(name) {
+        var value = "; " + document.cookie;
+        var parts = value.split("; " + name + "=");
+        if (parts.length === 2) return parts.pop().split(";").shift();
+    }
 </script>
 </body>
 </html>
