--- a/src/main/resources/templates/chat/roomdetail.html
+++ b/src/main/resources/templates/chat/roomdetail.html
@@ -50,7 +50,7 @@
     // websocket & stomp initialize
     var accessToken = getCookie('accessToken'); // 토큰을 바깥으로 빼냄
     var sock = new SockJS('/ws-stomp');
-    var ws = Stomp.over(sock);
+    var wss = Stomp.over(sock);
 
     // vue.js
     var vm = new Vue({
@@ -66,8 +66,8 @@
             this.roomId = localStorage.getItem('wschat.roomId');
             this.roomName = localStorage.getItem('wschat.roomName');
             var _this = this;
-            ws.connect({'Authorization': accessToken}, function (frame) {
-                ws.subscribe("/sub/chat/room/" + _this.roomId, function (message) {
+            wss.connect({'Authorization': accessToken}, function (frame) {
+                wss.subscribe("/sub/chat/room/" + _this.roomId, function (message) {
                     var recv = JSON.parse(message.body);
                     _this.recvMessage(recv);
                 },{'Authorization': accessToken});
@@ -79,7 +79,7 @@
 
         methods: {
             sendMessage: function (type) {
-                ws.send("/pub/chat/message", {"Authorization": accessToken},
+                wss.send("/pub/chat/message", {"Authorization": accessToken},
                     JSON.stringify({type: type, roomId: this.roomId, message: this.message}));
                 this.message = '';
             },
@@ -88,7 +88,7 @@
                 this.messages.unshift({"type": recv.type, "sender": recv.sender, "message": recv.message});
             },
             disconnectWebSocket: function () {
-                ws.disconnect(function () {
+                wss.disconnect(function () {
                     // 연결 해제 성공
                     console.log("웹소켓 서버 연결해제");
                 }, {
