--- a/src/main/resources/templates/chat/roomdetail.html
+++ b/src/main/resources/templates/chat/roomdetail.html
@@ -32,6 +32,9 @@
         </div>
         <input type="text" class="form-control" v-model="message" v-on:keypress.enter="sendMessage('TALK')">
         <div class="input-group-append">
+            <!-- 이미지 선택 버튼과 보내기 버튼 사이에 공백을 줌 -->
+            <input type="file" ref="imageInput" style="display:none" @change="handleImageUpload">
+            <button class="btn btn-secondary" type="button" @click="openImagePicker">이미지 선택</button>
             <button class="btn btn-primary" type="button" @click="sendMessage('TALK')">보내기</button>
         </div>
     </div>
@@ -99,7 +102,27 @@
                 // 채팅방 나가기 버튼 클릭 시 호출되는 함수
                 this.disconnectWebSocket(); // 웹소켓 연결 해제
                 // 여기에 채팅방 나가기 로직을 추가하세요.
-            }
+            },
+            openImagePicker: function() {
+                this.$refs.imageInput.click();
+            },
+            handleImageUpload: function(event) {
+                const file = event.target.files[0];
+                if (file) {
+                    const formData = new FormData();
+                    formData.append('file', file);
+                    axios.post('/upload/image', formData, {
+                        headers: {
+                            'Content-Type' : 'multipart/form-data'
+                        }
+                    }).then(response => {
+                        const imageUrl = response.data.imageUrl;
+                        this.sendMessage('IMAGE', imageUrl); // 이미지 URL을 함께 보내기
+                    }).catch(error => {
+                        console.error('이미지 업로드 에러:', error);
+                    });
+                }
+            },
         }
     });
     // 토큰 쿠키를 가져오는 함수
